@@ -1,5 +1,10 @@
 2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
 
+	* src/Base/CameraFilesystem.cs, src/Base/Port.cs: Cosmetic changes to clean
+	  up the four (unimportant) compile time warnings.
+
+2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
+
 	* src/Camera.cs: Cosmetic
 
 2007-09-23  Alan McGovern <alan.mcgovern@gmail.com> 
